--- a/css/sections/about.css
+++ b/css/sections/about.css
@@ -29,12 +29,11 @@
 
 .about-us__image-sushi3 {
   border-bottom: 8px solid var(--color-creamson);
-
-  background-image: url("../../assets/about_bg1.png")
 }
 
 .about-us__image-sushi2 {
-  background-image: url("../../assets/about_bg2.png")
+  width: 325px;
+  height: 300px;
 }
 
 .about-us__image-sushi3 img {
